--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,18 +1,59 @@
-[user]
-	name = xero
-	email = x@xero.nu
-[credential]
-	helper = cache
-[alias]
-	graph = log --graph --color --pretty=format:"%C(yellow)%H%C(green)%d%C(reset)%n%x20%cd%n%x20%cn%x20(%ce)%n%x20%s%n"
-	stat = status -sb
-	last = log -1 --stat
-	unstage = reset HEAD --
-	cached = diff --cached
-	d = difftool
 [color]
 	ui = auto
-[diff]
-	tool = vimdiff
-[difftool]
-	prompt = false
+[user]
+	name = Adam Elliott
+	email = eatsleepfolk@gmail.com
+[filter "lfs"]
+	clean = git lfs clean %f
+	smudge = git lfs smudge %f
+	required = true
+[core]
+	editor = vim
+
+[alias]
+  unstage = reset -q HEAD --
+  discard = checkout --
+  nevermind = !git reset --hard HEAD && git clean -d -f
+  uncommit = reset --mixed HEAD~
+  save = commit -m
+  resave = commit --amend
+  invert = revert
+  last = log -1 HEAD --format=format:"%Cred%H"
+  summary = status -u -s
+  graph = log --graph -10 --branches --remotes --tags  --format=format:'%Cgreen%h %Creset• %<(75,trunc)%s (%cN, %ar) %Cred%d' --date-order
+  history = log -10 --format=format:'%Cgreen%h %Creset• %s (%cN, %ar)'
+  branchout = checkout -b
+  new-branch = checkout -b
+  tags = tag
+  branches = branch -a
+  stashes = stash list
+  remotes = remote -v
+  prestage = diff -w --word-diff=color
+  precommit = diff --cached -w --word-diff=color --word-diff-regex='[^[:space:]<>]+'
+  move = mv
+  remove = rm
+  unmerged = branch --no-merged
+  unstash = stash pop
+  what = show -w
+  untrack = rm -r --cached
+  rewrite = rebase -i
+  amend = commit --amend
+  back = checkout "-"
+  contributors = shortlog -s -n --no-merges
+  filetrail = log --follow -p -w
+  mergetrail = log --ancestry-path --merges
+[blame]
+  date = relative
+[push]
+  default = current
+[core]
+  editor = vim
+  precomposeunicode = true
+  excludesfile = ~/.gitignore_global
+[credential]
+  helper = osxkeychain
+[merge]
+  conflictstyle = diff3
+[mailmap]
+  file = ~/.mailmap
+
